# coach-ai

./: .gitignore  APIS-EXTERNAS-ROADMAP.md  COACH-AI-V3-SISTEMA-INTELIGENTE-IMPLEMENTADO.md  CONFIGURAR-GSI.md  CORREÇÃO.md  ESTRATEGIA-GEMINI-FINALIZADA.md  GEMINI-CORRIGIDO.md  GEMINI-ESTRATEGICO-10-RPM.md  GEMINI-ICON-EXAMPLES.md  GEMINI_MEMORY_SYSTEM.md  GSI-OTIMIZADO-IMPLEMENTADO.md  ICONS-REFERENCE-GUIDE.md  ICONS-SYSTEM-IMPLEMENTED.md  ICONS-TROUBLESHOOTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INSTRUÇÕES-API-KEY.md  INTELLIGENT_ORCHESTRATOR_README.md  INTERFACE-SIMPLIFICADA-IMPLEMENTADA.md  LADO-CT-TR-IMPLEMENTADO.md  MOCKS-FALLBACKS-COMPLETAMENTE-ELIMINADOS.md  PROBLEMA-RESPOSTAS-VAZIAS-CORRIGIDO.md  PROMPT-ICONS-SUMMARY.md  PROMPTS-CONSOLIDADOS.md  RADAR-ANALYSIS-QUICKSTART.md  RADAR-VISUAL-ANALYSIS-IMPLEMENTED.md  README  README.md  README_SISTEMA_REFINADO.md  RESPOSTAS-NAO-TRUNCADAS.md  RESPOSTAS-PERSONALIZADAS-IMPLEMENTADO.md  RESUMO-ESTRATEGIA-IMPLEMENTADA.md  RESUMO-IMPLEMENTACOES-COMPLETO.md  SETUP_GUIDE.md  SIMULACOES-ELIMINADAS.md  SIMULAÇÕES-REMOVIDAS.md  SISTEMA-COMPLETO-IMPLEMENTADO.md  SISTEMA-MENSAGENS-LIMPAS-IMPLEMENTADO.md  SMART_COACHING_SYSTEM.md  SOLUCAO-COLCHETES-IMPLEMENTADA.md  (+11 more)
.cursor/rules/: alternate-solution.mdc  code-refactor.mdc  commercial-quality-standards.mdc  cs2-coach-architecture.mdc  fixing.mdc  new_feature.mdc  no-mocks-real-implementation.mdc  taskmaster-workflow.mdc
.taskmaster/: config.json  state.json
.taskmaster/docs/: coach-ai-electron-prd.txt  prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  task_024.txt  task_025.txt  tasks.json
config/: env.example  gamestate_integration_cs2coach.cfg  user_config.json
docs/: CONFIGURATION.md
src/coach/: elitePrompt.js  prompt.js
src/config/: userConfiguration.js
src/data/: README.md  gemini_memory.json
src/database/: geminiMemory.js
src/main/: main.js
src/native/screenshot/: CMakeLists.txt  package-lock.json  package.json
src/native/screenshot/src/: DesktopDuplicator.cpp  DesktopDuplicator.h  NapiDesktopDuplicator.cpp  NapiDesktopDuplicator.h  main.cpp
src/preload/: preload.js
src/renderer/: overlay.css  overlay.html  overlay.js
src/utils/: autoAnalyzer.js  cs2PathDetector.js  database.js  eventDetector.js  externalApiIntegration.js  geminiClient.js  geminiConfig.js  gsiConfigGenerator.js  gsiDeployer.js  gsiErrorHandler.js  heapProfiler.js  historicalDataComparator.js  historicalDataRetriever.js  multimodalCoach.js  performanceMetricsCalculator.js  postRoundAnalyzer.js  radarImageManager.js  smartAnalysisTrigger.js  teamChatManager.js  testCleanMessages.js  testRadarAnalysis.js  (+3 more)
(+43 files in other folders)
